Initial model elements and relationships

--- a/model/pom.xml
+++ b/model/pom.xml
@@ -58,9 +58,9 @@
 
 	<dependencies>	
 		<dependency>
-		    <groupId>org.nasdanika.core</groupId>
-		    <artifactId>exec</artifactId>
-		    <version>${core.version}</version>
+		    <groupId>org.nasdanika.models.architecture</groupId>
+		    <artifactId>model</artifactId>
+		    <version>${architecture.version}</version>
 		</dependency> 		
 		<dependency>
 		    <groupId>org.eclipse.emf</groupId>
