--- a/tests/analyzer/pom.xml
+++ b/tests/analyzer/pom.xml
@@ -2,19 +2,19 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>org.nasdanika.models.rules</groupId>
-		<version>2024.1.0</version>
+		<groupId>org.nasdanika.models.rules.tests</groupId>
+		<version>2024.2.0</version>
 		<artifactId>parent</artifactId>
-		<relativePath>../..</relativePath>
+		<relativePath>..</relativePath>
 	</parent>
-	<artifactId>test-analyzers</artifactId>
+	<artifactId>analyzer</artifactId>
 	<packaging>jar</packaging>
 	<name>Test Analyzer</name>
 	<description>Discovers inpsector sets and uses them to analyze input</description>
 	<dependencies>
 		<dependency>
 			<groupId>${project.groupId}</groupId>
-			<artifactId>test-inspector-set</artifactId>
+			<artifactId>inspectors</artifactId>
 			<version>${project.version}</version>
 		</dependency>		
 	</dependencies>
