--- a/tests/rules/pom.xml
+++ b/tests/rules/pom.xml
@@ -2,17 +2,17 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>org.nasdanika.models.rules</groupId>
-		<version>2024.1.0</version>
+		<groupId>org.nasdanika.models.rules.tests</groupId>
+		<version>2024.2.0</version>
 		<artifactId>parent</artifactId>
-		<relativePath>../..</relativePath>
+		<relativePath>..</relativePath>
 	</parent>
-	<artifactId>test-rule-set</artifactId>
+	<artifactId>rules</artifactId>
 	<packaging>jar</packaging>
 	<name>Test Rule Set</name>
 	<dependencies>
 		<dependency>
-			<groupId>${project.groupId}</groupId>
+			<groupId>org.nasdanika.models.rules</groupId>
 			<artifactId>model</artifactId>
 			<version>${project.version}</version>
 		</dependency>		
