--- a/tests/inspectors/pom.xml
+++ b/tests/inspectors/pom.xml
@@ -12,6 +12,11 @@
 	<name>Test Inspector Set</name>
 	<dependencies>
 		<dependency>
+		    <groupId>com.azure</groupId>
+		    <artifactId>azure-ai-openai</artifactId>
+		    <version>1.0.0-beta.6</version>
+		</dependency>		
+		<dependency>
 			<groupId>${project.groupId}</groupId>
 			<artifactId>rules</artifactId>
 			<version>${project.version}</version>
