--- a/tests/analyzer/pom.xml
+++ b/tests/analyzer/pom.xml
@@ -27,6 +27,11 @@
 			<artifactId>model</artifactId>
 			<version>2024.2.0</version>
 		</dependency>		
+		<dependency>
+			<groupId>org.nasdanika.models.java</groupId>
+			<artifactId>model</artifactId>
+			<version>2024.2.0</version>
+		</dependency>		
 	</dependencies>
 </project>
 
