--- a/model/pom.xml
+++ b/model/pom.xml
@@ -63,6 +63,11 @@
 		    <version>${architecture.version}</version>
 		</dependency> 		
 		<dependency>
+		    <groupId>org.nasdanika.core</groupId>
+		    <artifactId>capability</artifactId>
+		    <version>${core.version}</version>
+		</dependency> 		
+		<dependency>
 		    <groupId>org.eclipse.emf</groupId>
 		    <artifactId>org.eclipse.emf.ecore</artifactId>
 		    <version>2.35.0</version>
