--- a/cli/pom.xml
+++ b/cli/pom.xml
@@ -13,7 +13,7 @@
 	<dependencies>
 		<dependency>
 			<groupId>${project.groupId}</groupId>
-			<artifactId>model</artifactId>
+			<artifactId>processors</artifactId>
 			<version>${project.version}</version>
 		</dependency>
 		<dependency>
