--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.nasdanika.models.rules</groupId>
 	<artifactId>parent</artifactId>
-	<version>2025.6.0</version>
+	<version>2025.7.0</version>
 	<packaging>pom</packaging>
 	<name>Rules/inspectors model, processors, doc generator</name>
 	<description>Inspection of objects including Ecore models for compliance with rules</description>
@@ -22,10 +22,10 @@
 	</scm>
 
 	<properties>
-		<core.version>2025.6.0</core.version>
-		<html.version>2025.6.0</html.version>
-		<architecture.version>2025.6.0</architecture.version>
-		<models.ecore.version>2025.6.0</models.ecore.version>
+		<core.version>2025.7.0</core.version>
+		<html.version>2025.7.0</html.version>
+		<architecture.version>2025.7.0</architecture.version>
+		<models.ecore.version>2025.7.0</models.ecore.version>
 		<jacoco.version>0.8.12</jacoco.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven.javadoc.failOnError>false</maven.javadoc.failOnError>
@@ -191,7 +191,7 @@
 
 	 <profiles>
 		<profile>
-			<id>ossrh</id>
+			<id>central</id>
 			<build>
 				<plugins>
 					<plugin>
@@ -208,29 +208,18 @@
 							</execution>
 						</executions>
 					</plugin>	
-					<plugin>
-						<groupId>org.sonatype.plugins</groupId>
-						<artifactId>nexus-staging-maven-plugin</artifactId>
-						<version>1.7.0</version>
+					<plugin>					
+						<groupId>org.sonatype.central</groupId>
+						<artifactId>central-publishing-maven-plugin</artifactId>
+						<version>0.8.0</version>
 						<extensions>true</extensions>
 						<configuration>
-							<serverId>ossrh</serverId>
-							<nexusUrl>https://oss.sonatype.org/</nexusUrl>
-							<autoReleaseAfterClose>true</autoReleaseAfterClose>
+							<publishingServerId>central</publishingServerId>
+							<autoPublish>true</autoPublish>
 						</configuration>
-					</plugin>								
+					</plugin>
 				</plugins>
 			</build>
-			<distributionManagement>
-				<repository>
-					<id>ossrh</id>
-					<url>https://oss.sonatype.org/service/local/staging/deploy/maven2</url>
-				</repository>
-				<snapshotRepository>
-					<id>ossrh</id>
-					<url>https://oss.sonatype.org/content/repositories/snapshots</url>
-				</snapshotRepository>
-			</distributionManagement>	
 		</profile>
 	</profiles>
 
